<?xml version="1.0"?>
<package format="3">
  <name>tiago_pro_navigation</name>
  <version>2.13.3</version>
  <description>The tiago_pro Navigation metapackage</description>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <maintainer email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>tiago_pro_laser_sensors</exec_depend>
  <exec_depend>tiago_pro_2dnav</exec_depend>
  <exec_depend>tiago_pro_rgbd_sensors</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
